{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 27,
  "lineage": "8bd34525-332d-6458-689d-1296e1af4bbf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c670e3afff765012",
            "arn": "arn:aws:ec2:ap-southeast-2:301508956279:elastic-ip/eipalloc-0c670e3afff765012",
            "domain": "vpc",
            "id": "eipalloc-0c670e3afff765012",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-54-252-73-180.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.252.73.180",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "anisha.eip"
            },
            "tags_all": {
              "Name": "anisha.eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0892a9c01908fafd1",
            "arn": "arn:aws:ec2:ap-southeast-2:301508956279:instance/i-0e7070abb4fe13252",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e7070abb4fe13252",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f262aeea52922aca",
            "private_dns": "ip-10-0-1-20.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.20",
            "public_dns": "ec2-54-206-135-101.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.206.135.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08a6eae7776cb1299",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e8c8e78d191ae2c1",
            "tags": {
              "Name": "anisha.ec2"
            },
            "tags_all": {
              "Name": "anisha.ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bc10d97d8524fb8b"
            ]
          },
          "dependencies": [
            "aws_security_group.default",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:301508956279:internet-gateway/igw-0552f0001fbc3e025",
            "id": "igw-0552f0001fbc3e025",
            "owner_id": "301508956279",
            "tags": {
              "Name": "anisha.igw"
            },
            "tags_all": {
              "Name": "anisha.igw"
            },
            "vpc_id": "vpc-0eee8e70509d203b4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:301508956279:loadbalancer/app/anisha-alb/712d2f0912ec3c76",
            "arn_suffix": "app/anisha-alb/712d2f0912ec3c76",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "anisha-alb-1619469692.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:301508956279:loadbalancer/app/anisha-alb/712d2f0912ec3c76",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "anisha-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0bc10d97d8524fb8b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08dcf3665406c3c55"
              },
              {
                "subnet_id": "subnet-0e8c8e78d191ae2c1"
              }
            ],
            "subnets": [
              "subnet-08dcf3665406c3c55",
              "subnet-0e8c8e78d191ae2c1"
            ],
            "tags": {
              "Name": "anisha.alb"
            },
            "tags_all": {
              "Name": "anisha.alb"
            },
            "vpc_id": "vpc-0eee8e70509d203b4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "aws_security_group.default",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:301508956279:listener/app/anisha-alb/712d2f0912ec3c76/f84df605ecbd3d6b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:301508956279:targetgroup/anisha-target-group/1c17cda5d63377e7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:301508956279:listener/app/anisha-alb/712d2f0912ec3c76/f84df605ecbd3d6b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:301508956279:loadbalancer/app/anisha-alb/712d2f0912ec3c76",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "anisha.listener"
            },
            "tags_all": {
              "Name": "anisha.listener"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.main",
            "aws_security_group.default",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:301508956279:targetgroup/anisha-target-group/1c17cda5d63377e7",
            "arn_suffix": "targetgroup/anisha-target-group/1c17cda5d63377e7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:301508956279:targetgroup/anisha-target-group/1c17cda5d63377e7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "anisha-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "anisha.target-group"
            },
            "tags_all": {
              "Name": "anisha.target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0eee8e70509d203b4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:301508956279:targetgroup/anisha-target-group/1c17cda5d63377e7-20240918041851283100000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:301508956279:targetgroup/anisha-target-group/1c17cda5d63377e7",
            "target_id": "i-0e7070abb4fe13252"
          },
          "dependencies": [
            "aws_instance.my_instance",
            "aws_lb_target_group.main",
            "aws_security_group.default",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c670e3afff765012",
            "association_id": "eipassoc-0182cf00a8639101c",
            "connectivity_type": "public",
            "id": "nat-048a7c826aece36c2",
            "network_interface_id": "eni-0f6b983421be2d752",
            "private_ip": "10.0.1.96",
            "public_ip": "54.252.73.180",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e8c8e78d191ae2c1",
            "tags": {
              "Name": "anisha.nat"
            },
            "tags_all": {
              "Name": "anisha.nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:301508956279:route-table/rtb-0e3b70bb67d7abfae",
            "id": "rtb-0e3b70bb67d7abfae",
            "owner_id": "301508956279",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-048a7c826aece36c2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "anisha.pvt-route"
            },
            "tags_all": {
              "Name": "anisha.pvt-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eee8e70509d203b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:301508956279:route-table/rtb-064bd7ca22cfc7232",
            "id": "rtb-064bd7ca22cfc7232",
            "owner_id": "301508956279",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0552f0001fbc3e025",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "anisha.pub-route"
            },
            "tags_all": {
              "Name": "anisha.pub-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eee8e70509d203b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b0c95ac88271a88",
            "route_table_id": "rtb-0e3b70bb67d7abfae",
            "subnet_id": "subnet-0c6ff9712e5bd73bd"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08082913e79edae87",
            "route_table_id": "rtb-0e3b70bb67d7abfae",
            "subnet_id": "subnet-0148cdf37343b889e"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f510c67f6bd145fb",
            "route_table_id": "rtb-064bd7ca22cfc7232",
            "subnet_id": "subnet-0e8c8e78d191ae2c1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f938a42e7b5b5c8",
            "route_table_id": "rtb-064bd7ca22cfc7232",
            "subnet_id": "subnet-08dcf3665406c3c55"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:301508956279:security-group/sg-0bc10d97d8524fb8b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc10d97d8524fb8b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20240918041824765500000001",
            "name_prefix": "terraform-",
            "owner_id": "301508956279",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "anisha"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "anisha"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eee8e70509d203b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:301508956279:subnet/subnet-0c6ff9712e5bd73bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6ff9712e5bd73bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "301508956279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "anisha.private-subnet-1"
            },
            "tags_all": {
              "Name": "anisha.private-subnet-1"
            },
            "vpc_id": "vpc-0eee8e70509d203b4"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:301508956279:subnet/subnet-0148cdf37343b889e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0148cdf37343b889e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "301508956279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "anisha.private-subnet-2"
            },
            "tags_all": {
              "Name": "anisha.private-subnet-2"
            },
            "vpc_id": "vpc-0eee8e70509d203b4"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:301508956279:subnet/subnet-0e8c8e78d191ae2c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8c8e78d191ae2c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "301508956279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "anisha.public-subnet-1"
            },
            "tags_all": {
              "Name": "anisha.public-subnet-1"
            },
            "vpc_id": "vpc-0eee8e70509d203b4"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:301508956279:subnet/subnet-08dcf3665406c3c55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08dcf3665406c3c55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "301508956279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "anisha.public-subnet-2"
            },
            "tags_all": {
              "Name": "anisha.public-subnet-2"
            },
            "vpc_id": "vpc-0eee8e70509d203b4"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:301508956279:vpc/vpc-0eee8e70509d203b4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fd047d5f273a71b8",
            "default_route_table_id": "rtb-013ae3670823b6eb2",
            "default_security_group_id": "sg-08237cca6c62b691a",
            "dhcp_options_id": "dopt-d4993eb0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eee8e70509d203b4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-013ae3670823b6eb2",
            "owner_id": "301508956279",
            "tags": {
              "Name": "anisha.vpc"
            },
            "tags_all": {
              "Name": "anisha.vpc"
            }
          }
        }
      ]
    }
  ]
}